--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <!-- VENDOR SOURCE SCRIPTS -->
+
+
+    <!-- VENDOR LINKS -->
+
+
+    <!-- STYLESHEETS -->
+    <link rel="stylesheet" href="public/styles/main.css">
+    <link rel="stylesheet" href="public/styles/menu.css">
+
+    <title>Asian Hon</title>
   </head>
   <body>
+    <!-- START .header -->
+    <div class="header">
+      <!-- START .title -->
+      <div class="title">
+        <a href="index.html"><h1>Asian Hon</h1></a>
+      </div>
+      <!-- END .title -->
+
+      <!-- START .nav-wrapper -->
+      <div class="nav-wrapper">
+        <!-- START .nav-top -->
+        <div class="nav-top">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Pick-up/Dine-in Menu</a></li>
+            <li><a href="public/views/menu-delivery.html">Delivery Menu</a></li>
+            <li><a href="#">Catering</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+
+        </div>
+        <!-- END .nav-top -->
+      </div>
+      <!-- END .nav-warpper -->
+    </div>
+    <!-- END .header -->
+
 
   </body>
 </html>
